--- a/Examples/GrpcService/appsettings.json
+++ b/Examples/GrpcService/appsettings.json
@@ -5,9 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
 
   "ConnectionStrings": {
     "dfs": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DfsDatabase;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False"
-  }
+  },
+
+  "FileStorageNodes": [
+    "_dfs\\fake_disk_1",
+    "_dfs\\fake_disk_2"
+  ]
 }
