--- a/Examples/GrpcService/GrpcService.csproj
+++ b/Examples/GrpcService/GrpcService.csproj
@@ -1,13 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+	<LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DistributedFileStorage.EntityFrameworkCore" Version="1.0.0-rc1" />
+    <PackageReference Include="DistributedFileStorage.EntityFrameworkCore" Version="1.0.0-rc5" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
   </ItemGroup>
 
