--- a/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
+++ b/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
@@ -6,11 +6,9 @@
     <Nullable>enable</Nullable>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\GrpcFileStorage.snk</AssemblyOriginatorKeyFile>
-    
 	<AssemblyVersion>1.0.0</AssemblyVersion>
     <FileVersion>1.0.0</FileVersion>
-    <Version>1.0.0-rc1</Version>
-	
+    <Version>1.0.0</Version>
 	<Company></Company>
     <Authors>Leonid Salavatov</Authors>
     <Copyright>Leonid Salavatov 2021</Copyright>
@@ -30,10 +28,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="DistributedFileStorage.Abstractions" Version="1.0.0-rc1" />
-	<PackageReference Include="Google.Protobuf" Version="3.18.0" />
-	<PackageReference Include="Grpc.Net.Client" Version="2.39.0" />
-	<PackageReference Include="Grpc.Tools" Version="2.40.0">
+	<PackageReference Include="DistributedFileStorage.Abstractions" Version="1.0.0-rc5" />
+	<PackageReference Include="Google.Protobuf" Version="3.18.1" />
+	<PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
+	<PackageReference Include="Grpc.Tools" Version="2.41.0">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
