--- a/GrpcFileStorage/GrpcFileStorage.csproj
+++ b/GrpcFileStorage/GrpcFileStorage.csproj
@@ -1,25 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFramework>net6.0</TargetFramework>
+	<TargetFramework>net5.0</TargetFramework>
 	<LangVersion>latest</LangVersion>
 	<Nullable>enable</Nullable>
 	<ImplicitUsings>enable</ImplicitUsings>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\GrpcFileStorage.snk</AssemblyOriginatorKeyFile>
-    
 	<AssemblyVersion>1.0.0</AssemblyVersion>
     <FileVersion>1.0.0</FileVersion>
-    <Version>1.0.0-rc1</Version>
-	
+    <Version>1.0.0</Version>
 	<Company></Company>
     <Authors>Leonid Salavatov</Authors>
     <Copyright>Leonid Salavatov 2021</Copyright>
     <PackageId>GrpcFileStorage</PackageId>
     <Product>GrpcFileStorage</Product>
     <Title>GrpcFileStorage</Title>
-    <Description>.NET gRPC file storage</Description>
-    <PackageTags>grpc filestorage dotnet</PackageTags>
+    <Description>.NET gRPC file storage service</Description>
+    <PackageTags>grpc filestorage microservice aspnetcore dotnet</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/mustaddon/GrpcFileStorage</PackageProjectUrl>
     <RepositoryUrl>https://github.com/mustaddon/GrpcFileStorage</RepositoryUrl>
@@ -35,8 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="DistributedFileStorage" Version="1.0.0-rc1" />
-	<PackageReference Include="Grpc.AspNetCore" Version="2.39.0" />
+	<PackageReference Include="DistributedFileStorage" Version="1.0.0-rc5" />
+	<PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
   </ItemGroup>
 	
   <ItemGroup>
