--- a/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
+++ b/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
@@ -28,7 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="DistributedFileStorage.Abstractions" Version="1.0.0-rc5" />
+	<PackageReference Include="DistributedFileStorage.Abstractions" Version="1.0.0" />
 	<PackageReference Include="Google.Protobuf" Version="3.18.1" />
 	<PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
 	<PackageReference Include="Grpc.Tools" Version="2.41.0">
