--- a/Examples/GrpcService/GrpcService.csproj
+++ b/Examples/GrpcService/GrpcService.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DistributedFileStorage.EntityFrameworkCore" Version="1.0.0-rc5" />
+    <PackageReference Include="DistributedFileStorage.EntityFrameworkCore" Version="1.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
   </ItemGroup>
 
