--- a/GrpcFileStorage/GrpcFileStorage.csproj
+++ b/GrpcFileStorage/GrpcFileStorage.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="DistributedFileStorage" Version="1.0.0-rc5" />
+	<PackageReference Include="DistributedFileStorage" Version="1.0.0" />
 	<PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
   </ItemGroup>
 	
