--- a/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
+++ b/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
@@ -6,9 +6,9 @@
     <Nullable>enable</Nullable>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\GrpcFileStorage.snk</AssemblyOriginatorKeyFile>
-	<AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
-    <Version>1.0.0</Version>
+	<AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
+    <Version>1.0.1</Version>
 	<Company></Company>
     <Authors>Leonid Salavatov</Authors>
     <Copyright>Leonid Salavatov 2021</Copyright>
@@ -28,7 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="DistributedFileStorage.Abstractions" Version="1.0.0" />
+	<PackageReference Include="DistributedFileStorage" Version="1.0.1" />
 	<PackageReference Include="Google.Protobuf" Version="3.18.1" />
 	<PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
 	<PackageReference Include="Grpc.Tools" Version="2.41.0">
