--- a/Examples/Example.GrpcService.MongoDB/Example.GrpcService.MongoDB.csproj
+++ b/Examples/Example.GrpcService.MongoDB/Example.GrpcService.MongoDB.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+	<LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DistributedFileStorage.MongoDB" Version="1.0.1" />
+    <PackageReference Include="DistributedFileStorage.MongoDB" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
