--- a/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
+++ b/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
 	<LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\GrpcFileStorage.snk</AssemblyOriginatorKeyFile>
-	<AssemblyVersion>1.0.1</AssemblyVersion>
-    <FileVersion>1.0.1</FileVersion>
-    <Version>1.0.1</Version>
+	<AssemblyVersion>1.0.2</AssemblyVersion>
+    <FileVersion>1.0.2</FileVersion>
+    <Version>1.0.2</Version>
 	<Company></Company>
     <Authors>Leonid Salavatov</Authors>
     <Copyright>Leonid Salavatov 2021</Copyright>
@@ -28,7 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="DistributedFileStorage" Version="1.0.1" />
+	<PackageReference Include="DistributedFileStorage" Version="1.0.2" />
 	<PackageReference Include="Google.Protobuf" Version="3.19.0" />
 	<PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
 	<PackageReference Include="Grpc.Tools" Version="2.41.0">
