--- a/GrpcFileStorage/GrpcFileStorage.csproj
+++ b/GrpcFileStorage/GrpcFileStorage.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFramework>net5.0</TargetFramework>
+	<TargetFrameworks>net5.0;net6.0</TargetFrameworks>
 	<LangVersion>latest</LangVersion>
 	<Nullable>enable</Nullable>
 	<ImplicitUsings>enable</ImplicitUsings>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\GrpcFileStorage.snk</AssemblyOriginatorKeyFile>
-	<AssemblyVersion>1.0.1</AssemblyVersion>
-    <FileVersion>1.0.1</FileVersion>
-    <Version>1.0.1</Version>
+	<AssemblyVersion>1.0.2</AssemblyVersion>
+    <FileVersion>1.0.2</FileVersion>
+    <Version>1.0.2</Version>
 	<Company></Company>
     <Authors>Leonid Salavatov</Authors>
     <Copyright>Leonid Salavatov 2021</Copyright>
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="DistributedFileStorage" Version="1.0.1" />
+	<PackageReference Include="DistributedFileStorage" Version="1.0.2" />
 	<PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
   </ItemGroup>
 	
