--- a/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
+++ b/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net6.0;net7.0</TargetFrameworks>
 	<LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\GrpcFileStorage.snk</AssemblyOriginatorKeyFile>
-	<AssemblyVersion>1.0.2</AssemblyVersion>
-    <FileVersion>1.0.2</FileVersion>
-    <Version>1.0.2</Version>
+	<AssemblyVersion>1.0.3</AssemblyVersion>
+    <FileVersion>1.0.3</FileVersion>
+    <Version>1.0.3</Version>
 	<Company></Company>
     <Authors>Leonid Salavatov</Authors>
-    <Copyright>Leonid Salavatov 2021</Copyright>
+    <Copyright>Leonid Salavatov 2022</Copyright>
     <PackageId>GrpcFileStorage.Client</PackageId>
     <Product>GrpcFileStorage.Client</Product>
     <Title>GrpcFileStorage.Client</Title>
     <Description>.NET gRPC file storage client</Description>
-    <PackageTags>grpc filestorage client dotnet</PackageTags>
+    <PackageTags>grpc client filestorage file-storage blobstorage blob-storage distributed-storage storage</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/mustaddon/GrpcFileStorage</PackageProjectUrl>
     <RepositoryUrl>https://github.com/mustaddon/GrpcFileStorage</RepositoryUrl>
@@ -28,10 +28,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="DistributedFileStorage" Version="1.0.2" />
-	<PackageReference Include="Google.Protobuf" Version="3.19.0" />
-	<PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
-	<PackageReference Include="Grpc.Tools" Version="2.41.0">
+	<PackageReference Include="DistributedFileStorage" Version="1.0.3" />
+	<PackageReference Include="Google.Protobuf" Version="3.21.9" />
+	<PackageReference Include="Grpc.Net.Client" Version="2.50.0" />
+	<PackageReference Include="Grpc.Tools" Version="2.50.0">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
