--- a/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
+++ b/GrpcFileStorage.Client/GrpcFileStorage.Client.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net6.0;net7.0;net8.0</TargetFrameworks>
 	<LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\GrpcFileStorage.snk</AssemblyOriginatorKeyFile>
-	<AssemblyVersion>1.0.3</AssemblyVersion>
-    <FileVersion>1.0.3</FileVersion>
-    <Version>1.0.3</Version>
+	<AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0</FileVersion>
+    <Version>1.1.0</Version>
 	<Company></Company>
     <Authors>Leonid Salavatov</Authors>
-    <Copyright>Leonid Salavatov 2022</Copyright>
+    <Copyright>Leonid Salavatov 2024</Copyright>
     <PackageId>GrpcFileStorage.Client</PackageId>
     <Product>GrpcFileStorage.Client</Product>
     <Title>GrpcFileStorage.Client</Title>
@@ -28,14 +28,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="DistributedFileStorage" Version="1.0.3" />
-	<PackageReference Include="Google.Protobuf" Version="3.21.9" />
-	<PackageReference Include="Grpc.Net.Client" Version="2.50.0" />
-	<PackageReference Include="Grpc.Tools" Version="2.50.0">
+	<PackageReference Include="DistributedFileStorage" Version="1.1.0" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	<PackageReference Include="Google.Protobuf" Version="3.24.0" />
+	<PackageReference Include="Grpc.Net.Client" Version="2.60.0" />
+	<PackageReference Include="Grpc.Tools" Version="2.60.0">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
-	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
