--- a/GrpcFileStorage/GrpcFileStorage.csproj
+++ b/GrpcFileStorage/GrpcFileStorage.csproj
@@ -1,18 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
+	<TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
 	<LangVersion>latest</LangVersion>
 	<Nullable>enable</Nullable>
 	<ImplicitUsings>enable</ImplicitUsings>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\GrpcFileStorage.snk</AssemblyOriginatorKeyFile>
-	<AssemblyVersion>1.0.3</AssemblyVersion>
-    <FileVersion>1.0.3</FileVersion>
-    <Version>1.0.3</Version>
+	<AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0</FileVersion>
+    <Version>1.1.0</Version>
 	<Company></Company>
     <Authors>Leonid Salavatov</Authors>
-    <Copyright>Leonid Salavatov 2022</Copyright>
+    <Copyright>Leonid Salavatov 2024</Copyright>
     <PackageId>GrpcFileStorage</PackageId>
     <Product>GrpcFileStorage</Product>
     <Title>GrpcFileStorage</Title>
@@ -29,16 +29,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Endpoint.proto" />
+	<PackageReference Include="DistributedFileStorage" Version="1.1.0" />
   </ItemGroup>
 
-  <ItemGroup>
-	<PackageReference Include="DistributedFileStorage" Version="1.0.3" />
-	<PackageReference Include="Grpc.AspNetCore" Version="2.50.0" />
+  <ItemGroup Condition="'$(TargetFramework)' != 'net5.0'">
+  	<PackageReference Include="Grpc.AspNetCore" Version="2.60.0" />
   </ItemGroup>
 	
-  <ItemGroup>
-	<Protobuf Include="Endpoint.proto" GrpcServices="Server" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+	<PackageReference Include="Grpc.AspNetCore" Version="2.56.0" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+  	<None Remove="Endpoint.proto" />
+  </ItemGroup>
+  
+  <ItemGroup>
+  	<Protobuf Include="Endpoint.proto" GrpcServices="Server" />
+  </ItemGroup>
+	
 </Project>
